fix overflow

--- a/src/css/register.css
+++ b/src/css/register.css
@@ -17,6 +17,7 @@
   z-index: 40;
   width: 100vw;
   height: 80vh;
+  overflow-y: scroll;
 }
 
 .form-group {
